// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <p>
    Viewing 
    2
     expense
    s
     totalling €
    1,231.23
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly when no expenses 1`] = `
<div>
  <p>
    No expenses to view
  </p>
</div>
`;
